--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -7,6 +7,6 @@
     "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Anvesh Nalimela <nalimelaanvesh@gmail.com>",
+  "author": "vignesh <vigneshgone043@gmail.com>",
   "license": "ISC"
 }
